fixed spacing issue on Key takeaways section

--- a/style.css
+++ b/style.css
@@ -2534,6 +2534,13 @@ button.btn {
     padding-top: 2rem;
     padding-bottom: 3rem;
   }
+
+  .key_takeaways_citybus {
+    padding-top: 4rem;
+    padding-bottom: 3rem;
+  }
+
+
 }
 
 .grid_restructure {
